--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,8 +2,8 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "./node_modules/.bin/astro dev",
-      "name": "Development server",
+      "command": "rattlesnake",
+      "name": "rattlesnake",
       "request": "launch",
       "type": "node-terminal"
     }
